@@ -1,0 +1,35 @@
+/*
+ *
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
+ *
+ *   http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
+ *
+ */
+package org.apache.bookkeeper.replication;
+
+public interface ReplicationStats {
+
+    public final static String REPLICATION_SCOPE = "replication";
+
+    public final static String AUDITOR_SCOPE = "auditor";
+    public final static String ELECTION_ATTEMPTS = "election_attempts";
+
+    public final static String REPLICATION_WORKER_SCOPE = "replication_worker";
+    public final static String REREPLICATE_OP = "rereplicate";
+
+    public final static String BK_CLIENT_SCOPE = "bk_client";
+
+}
